Bug 342303 - Incorrect property dialog display for class attributes, methods, enumeration values or key constrains in tree view
Summary: Incorrect property dialog display for class attributes, methods, enumeration ...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.14.3 (KDE Applications 4.14.3)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-29 11:12 UTC by Ralf Habacker
Modified: 2014-12-29 12:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.15.1 (KDE 14.12.1)
Sentry Crash Report:


Attachments
test case xmi file (38.13 KB, application/x-uml)
2014-12-29 11:13 UTC, Ralf Habacker
Details
test case xmi file (10.88 KB, application/x-uml)
2014-12-29 11:14 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-12-29 11:12:45 UTC
Double clicking on a class attribute, method, enumaration value or key constraints in the tree view do not show the related property dialog.

Reproducible: Always

Steps to Reproduce:
1. open umbrello 
2. load the appended test case
3. in the tree view double click on 
3.1 a class attribute 
3.2 a class method
3.3 an enumeration value
3.4 a key constraint

Actual Results:  
The dialog of the related class or entity is shown which requires two additional mouse clicks to enter the required dialog 

Expected Results:  
The dialog of the class attribute, method, enumeration value or key constraint should be displayed directly
Comment 1 Ralf Habacker 2014-12-29 11:13:37 UTC
Created attachment 90155 [details]
test case xmi file
Comment 2 Ralf Habacker 2014-12-29 11:14:20 UTC
Created attachment 90156 [details]
test case xmi file

update
Comment 3 Ralf Habacker 2014-12-29 12:39:13 UTC
Git commit f215461bf9acc911607e8428c81d179e1d67be4f by Ralf Habacker.
Committed on 27/12/2014 at 21:34.
Pushed by habacker into branch 'Applications/14.12'.

Fix bug 'Incorrect property dialog display for class attributes, methods, enumeration values or key constrains in tree view'.

Details:
- Move up virtual method showPropertiesDialog() from ClassifierItemList to UMLObject
   to have properties dialog support for all uml objects.
- Add default value to parent attribute of showPropertiesDialog().
- Implement missing methods showPropertiesDialog() used by the tree and the code editor
- Implement fall back method showPropertiesDialog() to UMLObject.
- Remove obsolate method showPropertiesPagedDialog(), which did not work as documented since KDE 4.0.
FIXED-IN:2.15.1 (KDE 14.12.1)

M  +14   -0    umbrello/association.cpp
M  +2    -0    umbrello/association.h
M  +1    -1    umbrello/attribute.h
M  +1    -1    umbrello/checkconstraint.h
M  +0    -8    umbrello/classifierlistitem.h
M  +4    -34   umbrello/dialogs/codeeditor.cpp
M  +1    -1    umbrello/entityattribute.h
M  +1    -1    umbrello/enumliteral.h
M  +1    -1    umbrello/foreignkeyconstraint.h
M  +1    -1    umbrello/operation.h
M  +1    -1    umbrello/stereotype.h
M  +1    -1    umbrello/template.h
M  +1    -1    umbrello/uml.cpp
M  +4    -86   umbrello/umllistview.cpp
M  +7    -10   umbrello/umlobject.cpp
M  +1    -2    umbrello/umlobject.h
M  +19   -0    umbrello/umlrole.cpp
M  +2    -0    umbrello/umlrole.h
M  +2    -2    umbrello/umlscene.cpp
M  +2    -2    umbrello/umlview.cpp
M  +1    -1    umbrello/umlview.h
M  +1    -1    umbrello/uniqueconstraint.h
M  +1    -1    umbrello/widgets/widgetbase.cpp

http://commits.kde.org/umbrello/f215461bf9acc911607e8428c81d179e1d67be4f