Fix bug 'Incorrect property dialog display for class attributes, methods, enumeration values or key constrains in tree view'.

Details:
- Move up virtual method showPropertiesDialog() from ClassifierItemList to UMLObject
   to have properties dialog support for all uml objects.
- Add default value to parent attribute of showPropertiesDialog().
- Implement missing methods showPropertiesDialog() used by the tree and the code editor
- Implement fall back method showPropertiesDialog() to UMLObject.
- Remove obsolate method showPropertiesPagedDialog(), which did not work as documented since KDE 4.0.

BUG:342303
FIXED-IN:2.15.1 (KDE 14.12.1)