umbrello/association.h
@@ -78,6 +78,8 @@ public:
 
     void saveToXMI(QDomDocument& qDoc, QDomElement& qElement);
 
+    virtual bool showPropertiesDialog(QWidget *parent = 0);
+
 protected:
 
     bool load(QDomElement& element);
