umbrello/checkconstraint.h
@@ -46,7 +46,7 @@ public:
 
     void saveToXMI(QDomDocument & qDoc, QDomElement & qElement);
 
-    virtual bool showPropertiesDialog(QWidget* parent);
+    virtual bool showPropertiesDialog(QWidget* parent = 0);
 
     QString getCheckCondition() const {
         return m_CheckCondition;
