umbrello/umlscene.cpp
@@ -921,7 +921,7 @@ void UMLScene::mouseDoubleClickEvent(QGraphicsSceneMouseEvent* event)
         m_pToolBarState->mouseDoubleClick(event);
     if (!event->isAccepted()) {
         // show properties dialog of the scene
-        if (m_view->showPropDialog() == true) {
+        if (m_view->showPropertiesDialog() == true) {
             m_doc->setModified();
         }
         event->accept();
@@ -3102,7 +3102,7 @@ void UMLScene::slotMenuSelection(QAction* action)
         break;
 
     case ListPopupMenu::mt_Properties:
-        if (m_view->showPropDialog() == true)
+        if (m_view->showPropertiesDialog() == true)
             m_doc->setModified();
         break;
 
